--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <h1>My Awesome Website</h1>
             <p>Tagline</p>
         </header>
-        <div>
+        <div class="page">
             <aside>
                 <nav>
                     <ul>
-                        <li>
+                        <li class = "border">
                             <a href="/">Home</a>
                         </li>
-                        <li>
+                        <li class = "border">
                             <a href="/about.html">About</a>
                         </li>
                         <li>
@@ -31,13 +31,13 @@
             </aside>
             <main>
                 <img src="lorem.jpg" alt="lorem ipsum"  class="img" />
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quod voluptatum, excepturi, officiis ipsa aspernatur magnam, earum quos iure dicta ipsam minus. Amet exercitationem possimus, magnam consequuntur nisi ut quod.</p>
+                <p class= "para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quod voluptatum, excepturi, officiis ipsa aspernatur magnam, earum quos iure dicta ipsam minus. Amet exercitationem possimus, magnam consequuntur nisi ut quod.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque numquam placeat nulla cumque impedit animi ducimus incidunt, culpa itaque repudiandae quidem velit sit accusamus? Veritatis voluptates asperiores voluptate. Possimus, aliquam!</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et in eaque dolore accusamus expedita inventore voluptates explicabo asperiores ipsam quia minus recusandae consequuntur corporis nisi numquam aliquam neque, ab eveniet?</p>
             </main>
         </div>
         <footer>
-            <p>&copy; Your_name_here 2024. All rights reserved.</p>
+            <p class = "copyright">&copy; Your_name_here 2024. All rights reserved.</p>
         </footer>
     </div>
 </body>
