--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
             <h1>My Awesome Website</h1>
             <p>Tagline</p>
         </header>
-        <div>
+        <div class="page">
             <aside>
                 <nav>
                     <ul>
-                        <li>
+                        <li class = "border">
                             <a href="/">Home</a>
                         </li>
-                        <li>
+                        <li class = "border">
                             <a href="/about.html">About</a>
                         </li>
                         <li>
