--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <nav>
                     <ul>
                         <li class = "border">
-                            <a href="/">Home</a>
+                            <a href="">Home</a>
                         </li>
                         <li class = "border">
-                            <a href="/about.html">About</a>
+                            <a href="about.html">About</a>
                         </li>
                         <li>
-                            <a href="/contact.html">Contact Us</a>
+                            <a href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </nav>
