--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             </main>
         </div>
         <footer>
-            <p>&copy; Your_name_here 2024. All rights reserved.</p>
+            <p class = "copyright">&copy; Your_name_here 2024. All rights reserved.</p>
         </footer>
     </div>
 </body>
