--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <nav>
                     <ul>
                         <li class = "border">
-                            <a href="">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class = "border">
                             <a href="about.html">About</a>
